Testing with myocardial done, now adding DARWIN for zigzag analysis btw p = 100 ~ 200

--- a/scripts/load_data.ipynb
+++ b/scripts/load_data.ipynb
@@ -5,19 +5,51 @@
    "execution_count": null,
    "id": "6ccd0bfb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  > Loading dataset: myocardial\n",
+      "    Source: myocardial\n",
+      "    [myocardial Cleaning] Dropped 110 constant columns.\n",
+      "    Raw Data Shape: 1700 rows x 1 features\n",
+      "    Computed Correlation Matrix A: (1, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[1.]]),\n",
+       " array([[ 0.77216846],\n",
+       "        [ 0.77216846],\n",
+       "        [ 0.77216846],\n",
+       "        ...,\n",
+       "        [ 0.77216846],\n",
+       "        [-1.29505419],\n",
+       "        [ 0.77216846]], shape=(1700, 1)))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import io\n",
     "import requests\n",
+    "from ucimlrepo import fetch_ucirepo\n",
     "\n",
     "# Registry of supported datasets\n",
-    "DATASETS = {\n",
+    "DATASETS_URL = {\n",
     "    \"residential\": \"https://archive.ics.uci.edu/ml/machine-learning-databases/00437/Residential-Building-Data-Set.xlsx\",\n",
     "    \"secom\": \"https://archive.ics.uci.edu/ml/machine-learning-databases/secom/secom.data\",\n",
     "    \"arrhythmia\": \"https://archive.ics.uci.edu/ml/machine-learning-databases/arrhythmia/arrhythmia.data\",\n",
     "}\n",
+    "\n",
+    "DATASETS_ID = {\"myocardial\": 579}\n",
     "\n",
     "\n",
     "def load_dataset_online(name_or_url):\n",
@@ -32,33 +64,37 @@
     "        X_norm (np.ndarray): Normalized feature matrix (N x p).\n",
     "    \"\"\"\n",
     "    # 1. Resolve URL\n",
-    "    url = DATASETS.get(name_or_url.lower(), name_or_url)\n",
+    "    url = DATASETS_URL.get(name_or_url.lower(), name_or_url)\n",
     "\n",
     "    print(f\"  > Loading dataset: {name_or_url}\")\n",
     "    print(f\"    Source: {url}\")\n",
     "\n",
     "    try:\n",
-    "        # 2. Download Data (Robust SSL handling)\n",
-    "        response = requests.get(url, verify=False)\n",
-    "        response.raise_for_status()\n",
-    "        content = io.BytesIO(response.content)\n",
+    "        if name_or_url in DATASETS_URL:\n",
+    "            # 2. Download Data (Robust SSL handling)\n",
+    "            response = requests.get(url, verify=False)\n",
+    "            response.raise_for_status()\n",
+    "            content = io.BytesIO(response.content)\n",
     "\n",
-    "        # 3. Dispatch to specific loader based on known URLs\n",
-    "        if \"Residential-Building\" in url:\n",
-    "            X_raw = _parse_residential(content)\n",
-    "        elif \"secom\" in url:\n",
-    "            X_raw = _parse_secom(content)\n",
-    "        elif \"arrhythmia\" in url:\n",
-    "            X_raw = _parse_arrhythmia(content)\n",
-    "        else:\n",
-    "            # Fallback: Try generic CSV loading\n",
-    "            print(\"    Unknown format. Attempting generic CSV load...\")\n",
-    "            df = pd.read_csv(content)\n",
-    "            X_raw = df.select_dtypes(include=[np.number]).to_numpy()\n",
+    "            # 3. Dispatch to specific loader based on known URLs\n",
+    "            if \"Residential-Building\" in url:\n",
+    "                X_raw = _parse_residential(content)\n",
+    "            elif \"secom\" in url:\n",
+    "                X_raw = _parse_secom(content)\n",
+    "            elif \"arrhythmia\" in url:\n",
+    "                X_raw = _parse_arrhythmia(content)\n",
+    "            else:\n",
+    "                # Fallback: Try generic CSV loading\n",
+    "                print(\"    Unknown format. Attempting generic CSV load...\")\n",
+    "                df = pd.read_csv(content)\n",
+    "                X_raw = df.select_dtypes(include=[np.number]).to_numpy()\n",
     "\n",
-    "        if X_raw is None:\n",
-    "            return None, None\n",
-    "\n",
+    "            if X_raw is None:\n",
+    "                return None, None\n",
+    "        elif name_or_url in DATASETS_ID:\n",
+    "            if \"myocardial\" in name_or_url:\n",
+    "                X = fetch_ucirepo(id=DATASETS_ID[\"myocardial\"]).data.features\n",
+    "                X_raw = _parse_myocardial(X)\n",
     "        # 4. Standardize and Compute Correlation (Shared Logic)\n",
     "        return _standardize_and_correlate(X_raw)\n",
     "\n",
@@ -89,18 +125,6 @@
     "        return None\n",
     "\n",
     "\n",
-    "def _clean_constant_rows(X_raw, name):\n",
-    "    \"\"\"Drop constant rows (Repeated rows)\"\"\"\n",
-    "    # SECOM SPECIFIC: Drop constant columns (Variance = 0)\n",
-    "        # If we don't do this, the matrix is singular and solver crashes.\n",
-    "    std_devs = np.std(X_raw, axis=0)\n",
-    "    keep_idx = np.where(std_devs > 1e-9)[0]\n",
-    "\n",
-    "    print(\n",
-    "        f\"    [{name} Cleaning] Dropped {X_raw.shape[1] - len(keep_idx)} constant columns.\"\n",
-    "    )\n",
-    "    return X_raw[:, keep_idx]\n",
-    "\n",
     "def _parse_secom(content):\n",
     "    \"\"\"Parser for SECOM (Space-separated, No Header, Constant Columns).\"\"\"\n",
     "    try:\n",
@@ -108,7 +132,10 @@
     "        df = pd.read_csv(content, sep=r\"\\s+\", header=None)\n",
     "        X_raw = df.to_numpy(dtype=np.float64)\n",
     "\n",
-    "        return _clean_constant_rows(X_raw=X_raw, name=\"secom\")\n",
+    "        # Fill NaNs (SECOM has many)\n",
+    "        X_raw = np.nan_to_num(X_raw)\n",
+    "\n",
+    "        return _clean_constant_rows(X_raw, \"secom\")\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"    Error parsing SECOM CSV: {e}\")\n",
@@ -132,17 +159,36 @@
     "            .to_numpy(dtype=np.float64)\n",
     "        )\n",
     "\n",
-    "        _clean_constant_rows(X_raw, \"arrhythmia\")\n",
+    "        return _clean_constant_rows(X_raw, \"arrhythmia\")\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"    Error parsing Arrhythmia CSV: {e}\")\n",
     "        return None\n",
     "\n",
     "def _parse_myocardial(content):\n",
-    "    \n",
+    "    try:\n",
+    "        X_raw = content.apply(pd.to_numeric, errors=\"coerce\").fillna(0).to_numpy(dtype=np.float64)\n",
+    "        \n",
+    "        return _clean_constant_rows(X_raw, \"myocardial\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"    Error parsing Arrhythmia CSV: {e}\")\n",
+    "        return None\n",
     "\n",
     "# --- SHARED MATH ---\n",
     "\n",
+    "\n",
+    "def _clean_constant_rows(X_raw, name):\n",
+    "    \"\"\"Drop constant rows (Repeated rows)\"\"\"\n",
+    "    # SECOM SPECIFIC: Drop constant columns (Variance = 0)\n",
+    "        # If we don't do this, the matrix is singular and solver crashes.\n",
+    "    std_devs = np.std(X_raw, axis=0)\n",
+    "    keep_idx = np.where(std_devs > 1e-9)[0]\n",
+    "\n",
+    "    print(\n",
+    "        f\"    [{name} Cleaning] Dropped {X_raw.shape[1] - len(keep_idx)} constant columns.\"\n",
+    "    )\n",
+    "    return X_raw[:, keep_idx]\n",
     "\n",
     "def _standardize_and_correlate(X_raw):\n",
     "    \"\"\"\n",
@@ -168,12 +214,21 @@
     "    return A, X_norm\n",
     "\n",
     "\n",
-    "# load_dataset(\"arrhythmia\")\n"
+    "\n",
+    "load_dataset_online(\"myocardial\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "id": "b4d07f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "777d6272",
    "metadata": {},
    "outputs": [],
@@ -187,13 +242,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "36d5e1b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "X_raw = X.apply(pd.to_numeric, errors=\"coerce\").to_numpy(dtype=np.float64)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0742ecda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[77.,  1.,  2., ...,  1.,  0.,  0.],\n",
+       "       [55.,  1.,  1., ...,  1.,  0.,  1.],\n",
+       "       [52.,  1.,  0., ...,  1.,  0.,  0.],\n",
+       "       ...,\n",
+       "       [55.,  1.,  3., ...,  1.,  0.,  0.],\n",
+       "       [79.,  0.,  2., ...,  1.,  0.,  0.],\n",
+       "       [63.,  1.,  2., ...,  0.,  0.,  0.]], shape=(1700, 111))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_raw"
    ]
   },
   {
