Accuracy test fails

--- a/scripts/load_data.ipynb
+++ b/scripts/load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6ccd0bfb",
    "metadata": {},
    "outputs": [
@@ -12,25 +12,43 @@
      "text": [
       "  > Loading dataset: myocardial\n",
       "    Source: myocardial\n",
-      "    [myocardial Cleaning] Dropped 110 constant columns.\n",
-      "    Raw Data Shape: 1700 rows x 1 features\n",
-      "    Computed Correlation Matrix A: (1, 1)\n"
+      "    [myocardial Cleaning] Dropped 0 constant columns.\n",
+      "    Raw Data Shape: 1700 rows x 111 features\n",
+      "    Computed Correlation Matrix A: (111, 111)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([[1.]]),\n",
-       " array([[ 0.77216846],\n",
-       "        [ 0.77216846],\n",
-       "        [ 0.77216846],\n",
+       "(array([[ 1.        , -0.37434968,  0.08990689, ..., -0.05034158,\n",
+       "         -0.05099073, -0.03022833],\n",
+       "        [-0.37434968,  1.        ,  0.03998751, ..., -0.00922243,\n",
+       "          0.02960847,  0.05883139],\n",
+       "        [ 0.08990689,  0.03998751,  1.        , ..., -0.04475086,\n",
+       "         -0.01392607,  0.01097591],\n",
        "        ...,\n",
-       "        [ 0.77216846],\n",
-       "        [-1.29505419],\n",
-       "        [ 0.77216846]], shape=(1700, 1)))"
+       "        [-0.05034158, -0.00922243, -0.04475086, ...,  1.        ,\n",
+       "         -0.10236636, -0.21385819],\n",
+       "        [-0.05099073,  0.02960847, -0.01392607, ..., -0.10236636,\n",
+       "          1.        ,  0.05558756],\n",
+       "        [-0.03022833,  0.05883139,  0.01097591, ..., -0.21385819,\n",
+       "          0.05558756,  1.        ]], shape=(111, 111)),\n",
+       " array([[ 1.28601462,  0.77216846,  1.73022388, ...,  0.59818682,\n",
+       "         -0.13403012, -0.50091895],\n",
+       "        [-0.54708801,  0.77216846,  0.53405446, ...,  0.59818682,\n",
+       "         -0.13403012,  1.99633095],\n",
+       "        [-0.79705655,  0.77216846, -0.66211495, ...,  0.59818682,\n",
+       "         -0.13403012, -0.50091895],\n",
+       "        ...,\n",
+       "        [-0.54708801,  0.77216846,  2.9263933 , ...,  0.59818682,\n",
+       "         -0.13403012, -0.50091895],\n",
+       "        [ 1.45266032, -1.29505419,  1.73022388, ...,  0.59818682,\n",
+       "         -0.13403012, -0.50091895],\n",
+       "        [ 0.11949477,  0.77216846,  1.73022388, ..., -1.67171853,\n",
+       "         -0.13403012, -0.50091895]], shape=(1700, 111)))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
