--- a/scripts/plot_heatmap_matrix.ipynb
+++ b/scripts/plot_heatmap_matrix.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a03850c3",
+   "metadata": {},
+   "source": [
+    "# Data set analysis\n",
+    "Create heatmap for dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "74a1b0c6",
