--- a/scripts/plot_k_corr.ipynb
+++ b/scripts/plot_k_corr.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3173bcf4",
+   "metadata": {},
+   "source": [
+    "# Test 1 : Parameter Tuning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "1c16687e",
