--- a/scripts/test1_parameter_tuning.ipynb
+++ b/scripts/test1_parameter_tuning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1c16687e",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
     "import sys\n",
     "import seaborn as sns\n",
     "\n",
-    "# Try to get the script directory; if in a notebook, use the current working directory\n",
+    "# For ipynb environemnt\n",
     "try:\n",
     "    SCRIPT_DIR = Path(__file__).resolve().parent\n",
     "except NameError:\n",
@@ -56,6 +56,7 @@
     "        df = pd.read_csv(LOG_FILE)\n",
     "        # Clean column names (remove spaces)\n",
     "        df.columns = df.columns.str.strip()\n",
+    "        df.columns = df.columns.str.lower()\n",
     "        return df\n",
     "    except Exception as e:\n",
     "        print(f\"Error reading CSV: {e}\")\n",
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "29ebf7f9",
    "metadata": {},
    "outputs": [
@@ -284,18 +285,15 @@
     "    )\n",
     "\n",
     "    # 3. Overlay the actual data points (jitter)\n",
-    "    # FIXED: Changed 'data=df' to 'data=subset' so we only see THIS dataset's points\n",
     "    sns.stripplot(\n",
     "        x=\"Alpha\", \n",
     "        y=\"Relative Error (%)\", \n",
-    "        data=subset, # <--- FIXED\n",
+    "        data=subset,\n",
     "        color='black', \n",
     "        alpha=0.3, \n",
     "        jitter=True\n",
     "    )\n",
     "\n",
-    "    # 4. Thesis Styling (Bigger fonts, No title)\n",
-    "    # We remove plt.title() because the LaTeX caption acts as the title\n",
     "    plt.ylabel(\"Relative Error (%)\", fontsize=14, fontweight='bold')\n",
     "    plt.xlabel(\"Step Size (Alpha)\", fontsize=14, fontweight='bold')\n",
     "    plt.xticks(fontsize=12)\n",
@@ -304,13 +302,11 @@
     "    plt.tight_layout()\n",
     "\n",
     "    # 5. Save and Close\n",
-    "    # Using pathlib / operator as in your snippet\n",
     "    save_path = PROJECT_ROOT / \"logs\" / \"plots\"/ \"box_alpha_errors\" / f\"box_{dataset_name}_data_errors.pdf\"\n",
     "    \n",
     "    save_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "    plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
     "    \n",
-    "    # Close the plot to free memory (crucial when looping)\n",
     "    plt.close()\n",
     "    print(f\"Saved: {save_path.name}\")\n",
     "\n",
@@ -366,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "82e23d49",
    "metadata": {},
    "outputs": [
@@ -382,10 +378,7 @@
     }
    ],
    "source": [
-    "plot_one_dataset_heatmap_alpha_m_error(df, \"Residential\")\n",
-    "# Plot all\n",
-    "# for dataset_name in df[\"Dataset\"].unique():\n",
-    "#     plot_one_dataset_heatmap_alpha_m_error(df, dataset_name)"
+    "plot_one_dataset_heatmap_alpha_m_error(df, \"Residential\")"
    ]
   },
   {
